+++ 0.9.4 

+ 3 minor enhancement
  + 'Licence' => 'License' (thx Peter Burns)
  + Generates a blank index.html so that 'rake package' works straight away
  + Includes :local_deploy which does tasks :website_generate and :install_gem

+++ 0.9.3 20/4/2007

+ 1 minor enhancement
  + Added 'deploy' task that generates website AND release new gem
+ 1 website fix
  + Fixed download link

+++ 0.9.2 18/4/2007

+ 1 minor improvement:
  + Generated apps include a "require 'rubygems' line at the top"
+ 1 website fix
  + Notes that the index.txt file includes Dr Nic details, not their own.[FIXME!!]

+++ 0.9.1 16/4/2007

+ 1 bugfix:
  + I thoughtfully added an extra line (commented out) for sending the website to a subfolder... it caused grief at the 13th hour

+++ 0.9.0 12/4/2007

+ 3 major enhancements:
  + Includes a basic website template, with rake tasks for generation and upload to rubyforge
  + Generates a History.txt file, and automatically uses it in Hoe task
  + Generated applications include framework for supporting command line options
+ 3 minor enhancements:
  + Include History.txt in this gem
  + test files ordered correctly in generated Manifest.txt
  + no blank line in Manifest.txt if no bin apps

+++ 0.8.1 

  - Generated test file's class name now prefixed with Test, instead of suffixed

+++ 0.8.0 

  - Uses hoe itself - less hypocritical
	- Generated test files use name 'test_<gemname>.rb' instead of '<gemname>_test.rb' to support
	  ZenTest's autotest expectations of naming. Manifest updated too.

+++ 0.7.1 

  - Installed gems now don't require 'hoe' (based on comments at  http://blog.evanweaver.com/articles/2007/01/10/if-you-dont-want-to-hoe-echoe)
