@@ -1,0 +1,11 @@
+<html>
+	<head>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<title>#{gem_name}</title>
+		
+	</head>
+	<body id="body">
+		<p>This page has not yet been created for RubyGem <code>#{gem_name}</code></p>
+		<p>To the developer: To generate it, update website/index.txt and run the rake task <code>website</code> to generate this <code>index.html</code> file.</p>
+	</body>
+</html>
